fixed some layout issues

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -23,7 +23,6 @@ li {
 header{
   padding: 10px;
   background-color: #F5F5F5;
-  display: inline-block;
   a {
   color: black;
   }
